--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -82,3 +82,73 @@
     list-style: none;
     padding: 10px 20px;
 }
+
+/*下拉框提示div*/
+.pullDownDiv {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    z-index: 100;
+    left: 5px;
+    top: 45px;
+}
+
+.pullDownDivTipTop {
+    border-top: none;
+    border-right: 380px solid transparent;
+    border-bottom: 50px solid palevioletred;
+    border-left: 20px solid transparent;
+}
+
+.pullDownDivTipBody {
+    width: 400px;
+    max-height: 600px;
+    background-color: #efefef;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+    overflow: auto;
+}
+
+.pullDownDivTipBody ul {
+    padding: 0px;
+    margin: 0px;
+}
+
+.pullDownDivTipBody ul li {
+    list-style: none;
+    padding: 10px 15px;
+}
+
+.pullDownDivTipBody ul li:hover {
+    background-color: #999999;
+}
+
+.pullDownButton {
+    border: none;
+    float: right;
+    padding: 2px 15px;
+    border-radius: 3px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.pullDownButton:hover {
+    background-color: #5DB85D;
+}
+
+/*搜索框样式-start*/
+#searchInput {
+    display: inline-block;
+    font-size: 16px;
+    width: 300px;
+    padding: 10px 10px 10px 40px;
+    border: 1px solid grey;
+    border-radius: 2px;
+    box-sizing: border-box;
+    box-shadow: 0 3px 2px 2px rgba(0, 0, 0, 0.1);
+    background: url("../img/searchicon.png") 10px 10px no-repeat;
+}
+
+#searchInput:hover {
+    width: 400px;
+    box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s;
+}
