--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" th:href="@{/js/lib/prism/prism.css}">
-    <script th:src="@{/js/lib/prism/prism.js}"></script>
     <link rel="stylesheet" th:href="@{/js/lib/jodit/plugins/paste-code/paste-code.css}">
     <script th:src="@{/js/lib/jodit/plugins/paste-code/paste-code.js}"></script>
     <link rel="stylesheet" th:href="@{/js/lib/jodit/jodit.css}">
     <script th:src="@{/js/lib/jodit/jodit.js}"></script>
-    <script th:src="@{/js/base.js}" src=""></script>
+    <script th:src="@{/js/base.js}"></script>
     <link rel="stylesheet" th:href="@{/css/article.css}">
     <title>单体文章</title>
 </head>
